# MCP

./: README.md  mcp_client.config  pyproject.toml
neogit/: __init__.py
neogit/ai/: __init__.py  project_analyzer.py  readme_generator.py
neogit/cli/: __init__.py  main.py
neogit/components/: ascii_art.txt
neogit/config/: __init__.py  manager.py
neogit/github/: __init__.py  manager.py
neogit/server/: server.py
neogit/utils/: file_utils.py  prompt_utils.py
